--- a/app/src/main/res/layout/dial_pad.xml
+++ b/app/src/main/res/layout/dial_pad.xml
@@ -18,7 +18,9 @@
         android:background="#ffffff"
         android:layout_marginRight="3dp"
         android:clickable="true"/>
-    <GridView android:id="@+id/dialPad"
+
+    <GridView
+        android:id="@+id/dialPad"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:numColumns="3"
@@ -26,7 +28,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:gravity="center"
-        android:listSelector="@color/contact_bg"></GridView>
+        android:listSelector="@color/contact_bg"
+        android:longClickable="false" />
 
 
     <ImageButton android:id="@+id/callButton"
