--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,9 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#fb4174fd</color>
     <color name="contact_bg">#beefed</color>
-    <color name="Transparent">#E6E6E6</color>
+    <color name="Transparent">#e6e6e6</color>
     <color name="list1">#AB47BC</color>
     <color name="list2">#EC407A</color>
     <color name="list3">#EF5350</color>
