--- a/app/src/main/res/layout/alertbuilder.xml
+++ b/app/src/main/res/layout/alertbuilder.xml
@@ -8,10 +8,10 @@
         android:id="@+id/alertbuilder"
         android:layout_width="230dp"
         android:layout_height="230dp"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@color/Transparent"
-        android:scaleType="fitXY"/>
+        app:srcCompat="@color/Transparent" />
 </android.support.constraint.ConstraintLayout>
