--- a/app/src/main/res/layout/contact_edit.xml
+++ b/app/src/main/res/layout/contact_edit.xml
@@ -8,36 +8,38 @@
     android:focusableInTouchMode="false">
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/done"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="60dp"
-        android:layout_marginRight="40dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginRight="20dp"
         android:clickable="true"
-        android:id="@+id/save" />
-
+        android:src="@drawable/done" />
 
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="50dp"
         android:layout_marginLeft="25dp"
-        android:layout_marginBottom="85dp"
         android:layout_marginRight="25dp"
         android:layout_marginTop="120dp"
-        android:background="#8cffffff">
+        android:background="#8cffffff"
+        android:fadingEdge="horizontal|vertical">
 
-        <TextView android:id="@+id/title"
+        <TextView
+            android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="_______Edit Field_______"
             android:layout_marginTop="120dp"
+            android:gravity="center"
             android:singleLine="true"
+            android:text="_______Edit Field_______"
             android:textSize="25sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -47,90 +49,97 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/title">
-                
-                <EditText android:id="@+id/fname"
-                    android:layout_below="@+id/title"
+
+                <EditText
+                    android:id="@+id/fname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_below="@+id/title"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="12dp"
                     android:hint="Name"
                     android:inputType="textCapWords"
-                    android:textSize="25sp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"/>
+                    android:textSize="25sp" />
 
 
-                <EditText android:id="@+id/listNumber"
+                <EditText
+                    android:id="@+id/listNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_below="@id/fname"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="25sp"
-                    android:inputType="number"
                     android:layout_gravity="center"
                     android:layout_marginLeft="20dp"
-                    android:layout_marginTop="12dp"
                     android:layout_marginRight="20dp"
-                    android:hint="Mobile No." />
+                    android:layout_marginTop="12dp"
+                    android:hint="Mobile No."
+                    android:inputType="number"
+                    android:textSize="25sp" />
 
-                <EditText android:id="@+id/email"
+                <EditText
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_below="@+id/listNumber"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="25sp"
-                    android:inputType="textEmailAddress"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="12dp"
                     android:hint="Email"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginRight="20dp"/>
+                    android:inputType="textEmailAddress"
+                    android:textSize="25sp" />
 
-                <EditText android:id="@+id/address"
+                <EditText
+                    android:id="@+id/address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_below="@+id/email"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Address"
-                    android:textSize="25sp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="12dp"
                     android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"/>
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="12dp"
+                    android:hint="Address"
+                    android:textSize="25sp" />
 
-                <EditText android:id="@+id/company"
-                    android:layout_below="@+id/address"
+                <EditText
+                    android:id="@+id/company"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_below="@+id/address"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="12dp"
                     android:hint="Company"
                     android:inputType="textCapWords"
-                    android:textSize="25sp"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginRight="20dp"/>
+                    android:textSize="25sp" />
 
-                <AutoCompleteTextView android:id="@+id/group"
+                <AutoCompleteTextView
+                    android:id="@+id/group"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/company"
-                    android:textSize="25sp"
-                    android:inputType="textCapWords"
                     android:layout_gravity="center"
                     android:layout_marginLeft="20dp"
-                    android:layout_marginTop="12dp"
                     android:layout_marginRight="20dp"
-                    android:hint="Group" />
+                    android:layout_marginTop="12dp"
+                    android:hint="Group"
+                    android:inputType="textCapWords"
+                    android:textSize="25sp" />
 
-                <EditText android:id="@+id/birthDate"
+                <EditText
+                    android:id="@+id/birthDate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/group"
-                    android:textSize="25sp"
                     android:layout_gravity="center"
                     android:layout_marginLeft="20dp"
-                    android:layout_marginTop="12dp"
                     android:layout_marginRight="20dp"
+                    android:layout_marginTop="12dp"
+                    android:focusable="false"
                     android:hint="BirthDate"
-                    android:focusable="false"/>
+                    android:textSize="25sp" />
 
 
             </RelativeLayout>
